--- a/index.html
+++ b/index.html
@@ -12,5 +12,11 @@
     <p>PARAGRAPH</p>
     <p>SECOND PARAGRAPH</p>
     
+    <script>
+    var x = 5;
+    var y = 6;
+
+    </script>
+
 </body>
 </html>
